--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/AkylKa/HardBass#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.5.0",
     "discord.js": "^12.5.3",
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
+    "yt-search": "^2.8.0",
     "ytdl-core": "^4.8.2"
   }
 }
