--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
   "homepage": "https://github.com/AkylKa/HardBass#readme",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
+    "chalk": "^4.1.1",
     "discord.js": "^12.5.3",
+    "discord.js-commando": "^0.12.3",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
+    "request-promise": "^4.2.6",
+    "simple-youtube-api": "^5.2.1",
+    "winston": "^3.3.3",
+    "youtube-api-v3-search": "^1.2.1",
     "yt-search": "^2.8.0",
     "ytdl-core": "^4.8.2"
   }
