--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "chalk": "^4.1.1",
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
+    "enmap": "^5.8.5",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
+    "inquirer": "^8.1.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
